# python-wrapper

./: .gitignore  LICENSE  README  python-wrapper.cabal  pywrap-c.c  pywrap.cabal
lib/: PyWrap.hs  PythonWrapper.hs
test/: Main.hs
