cabal-version:      3.0
name:               python-wrapper
version:            0.1
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jake Wheat
maintainer:         jakewheat@tutanota.com
-- copyright:
build-type:         Simple
extra-doc-files:    
-- extra-source-files:

common common
    ghc-options:       -Wall
    default-language:  Haskell2010

library
    import:            common
    exposed-modules:   PythonWrapper
    build-depends:     base >=4.17.0.0 && < 5,
                       text,
                       raw-strings-qq,
                       async,
                       mtl,
                       safe-exceptions,
    hs-source-dirs:    lib
    pkgconfig-depends: python3,
                       python3-embed
    C-sources:         python-wrapper-c.c

test-suite python-wrapper-test
    import:            common
    type:              exitcode-stdio-1.0
    hs-source-dirs:    test
    main-is:           Main.hs
    build-depends:     base >=4.17.0.0 && < 5,
                       python-wrapper,
                       tasty,
                       tasty-hunit,
                       text,
                       raw-strings-qq,
                       mtl,
    ghc-options:       -threaded
