cabal-version:      3.0
name:               pywrap
version:            0.1
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jake Wheat
maintainer:         jakewheat@tutanota.com
-- copyright:
build-type:         Simple
extra-doc-files:    
-- extra-source-files:

common common
    ghc-options:       -Wall
    default-language:  Haskell2010

library
    import:            common
    exposed-modules:   PyWrap
    build-depends:     base ^>=4.19.0.0,
                       text,
                       raw-strings-qq,
                       async,
                       mtl,
                       safe-exceptions,

    -- other-modules:
    -- other-extensions:
    hs-source-dirs:    lib
    pkgconfig-depends: python3
    -- todo: how to find the local python3 version instead of hardcoding it
    extra-libraries:   python3.11
    C-sources:         pywrap-c.c

test-suite pywrap-test
    import:            common
    -- other-modules:
    -- other-extensions:
    type:              exitcode-stdio-1.0
    hs-source-dirs:    test
    main-is:           Main.hs
    build-depends:     base ^>=4.19.0.0,
                       pywrap,
                       tasty,
                       tasty-hunit,
                       text,
                       raw-strings-qq,
                       mtl,
    ghc-options:       -threaded
